--- a/wiki/BootstrapperTutorial.wiki
+++ b/wiki/BootstrapperTutorial.wiki
@@ -91,7 +91,7 @@ Imagine you are using an inversion of control container which intakes `IModule` 
 
 The application we are designing allocates both managed and unmanaged resources which need to be removed when the application is shutting down. To get this behavior some extension occasionally implement `IDisposable` which needs to be called when shutting down.
 
-Furthermore the application uses configuration sections to be able to overwrite some default configurations without recompiling the application. These configuration entries must be parsed and passed to the extensions which rely on their existance.
+Furthermore the application uses configuration sections to be able to overwrite some default configurations without recompiling the application. These configuration entries must be parsed and passed to the extensions which rely on their existence.
 == Extension interface ==
 A custom extension interface for this example could look like the following:
 
@@ -402,7 +402,7 @@ Furthermore for each extension which needs access to an extension configuration 
   </ExtensionWithExtensionConfigurationSection>
 </configuration>
 }}}
-The corresponding extension can now simply declare properties with names matching the keys in the configuration dictionary. The behavior automatically fills the properties with the values found in the configuration dictionary. The bootstrapper tries to automatically convert the values found in the dictionary to the target property type by using `System.Convert.ChangeType`. When complex conversions need to be done it can be customized according to the description in the customization section. _Note:The properties must have an accessible setter._
+The corresponding extension can now simply declare properties with names matching the keys in the configuration dictionary. The behavior automatically fills the properties with the values found in the configuration dictionary. The bootstrapper tries to automatically convert the values found in the dictionary to the target property type by using `System.Convert.ChangeType`. When complex conversions need to be done it can be customized according to the description in the customization section. _Note: The properties must have an accessible setter._
 {{{
     public class ExtensionWithExtensionConfigurationSection : CustomExtensionBase
     {
@@ -440,7 +440,7 @@ The extension must implement `IConsumeConfiguration`. The `Configuration` proper
     }
 }}}
 = Reporting =
-The reporting mechanism allows to create a full report of the bootstrapping process. To be able to report the bootstrapping process the process must actually run and a reporter must be present. By default the bootstrapper uses a null reporter which does nothing with the report. But it is also possible to hook in a report generator which creates Visio, Enterprise Architect or ... (you name it!) diagrams. 
+The reporting mechanism allows creating a full report of the bootstrapping process. To be able to report the bootstrapping process the process must actually run and a reporter must be present. By default the bootstrapper uses a null reporter which does nothing with the report. But it is also possible to hook in a report generator which creates Visio, Enterprise Architect or ... (you name it!) diagrams. 
 
 A custom reporter must implement the reporter interface `IReporter`. The reporter receives an `IReportingContext` which contains all necessary information about the bootstrapping process. The custom reporter must be passed upon the construction of the `DefaultBootstrapper<TExtension>`.
 
@@ -476,7 +476,7 @@ The reporting context is structured like the following:
 Executors are responsible for executing extension points on extensions and the behaviors attached to it. Different executors can be used for the startup and shutdown phase of the application. An executor must implement `IExecutor<TExtension>`. There are two executors:
  * RunExecutor
  * ShutdownExecutor
-Executors can be customized by implementing `CreateRunExecutor` and/or `CreateShutdownExecutor` on `IStrategy<TExtension>`. For example below you see a sample implementations of a run executor which executes each executable on its own thread. 
+Executors can be customized by implementing `CreateRunExecutor` and/or `CreateShutdownExecutor` on `IStrategy<TExtension>`. For example below you see sample implementations of a run executor which executes each executable on its own thread. 
 {{{
     public class AsynchronousRunExecutor : IExecutor<ICustomExtension>
     {
@@ -608,7 +608,7 @@ And here the strategy...
     }
 }}}
 == Extension Resolvers ==
-An extension resolver allows to plug in extensions into the bootstrapper. All extensions which are resolved by the extension resolver are added before manually added extensions. An extension resolver must implement `IExtensionResolver<TExtension>` and add all resolved extensions to the provided `IExtensionPoint<TExtension>`.
+An extension resolver allows plugging in extensions into the bootstrapper. All extensions which are resolved by the extension resolver are added before manually added extensions. An extension resolver must implement `IExtensionResolver<TExtension>` and add all resolved extensions to the provided `IExtensionPoint<TExtension>`.
 {{{
     public class CustomExtensionResolver : IExtensionResolver<ICustomExtension>
     {
@@ -630,7 +630,17 @@ And here the strategy...
     }
 }}}
 == Reporting Context ==
-TODO
+The reporting context tracks all bootstrapping information during the startup and shutdown phase. If the reporting context creation needs to be customized this can be achieved by overriding the `CreaterReportingContext` method on the `AbstractStrategy<TExtension>`. The custom reporting context must implement `IReportingContext`.
+{{{
+    public class CustomizationStrategy : AbstractStrategy<ICustomExtension>
+    {
+        public override IReportingContext CreateReportingContext()
+        {
+            return new CustomReportingContext();
+        }
+    }
+}}}
+The default reporting context implementation offers several virtual members to overload the creation of the several child context implementations used in the reporting context. It is generally easier to start with overriding the virtual members instead of creating an own reporting context.
 == ConfigurationSection ==
 TODO
 == ExtensionConfigurationSection ==
