--- a/wiki/Bootstrapper.wiki
+++ b/wiki/Bootstrapper.wiki
@@ -34,3 +34,5 @@ The bootstrapper package ships with some core behaviors which can be plugged int
   * Support to automatically dispose extensions which implement IDisposable
 == Reporting ==
 The bootstrapper records the bootstrapping process and allows reporting the whole process to a reporter. This can be used to automatically generate architecture and design documents which describe the bootstrapping mechanism.
+== Further Information==
+Code samples: See sample project and unit tests in code for more samples.
